--- a/AirportMVC/Properties/launchSettings.json
+++ b/AirportMVC/Properties/launchSettings.json
@@ -1,26 +1,23 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:50945",
-      "sslPort": 44396
+      "applicationUrl": "http://localhost:51325",
+      "sslPort": 44363
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/flights",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "AirplaneAPI": {
+    "AirportMVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/flights",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
